vpc-1-infra/igw.tf
#Internet Gateway is attached to mumbai region VPC
resource "aws_internet_gateway" "vpc-1-igw" {
  vpc_id = aws_vpc.vpc-1.id
  tags = {
    Name = "vpc-1-igw"
  }
}
