vpc-1-infra/vpc.tf
#Mumbai region VPC
resource "aws_vpc" "vpc-1" {
  cidr_block = var.vpc-cidr
  tags = {
    Name = var.vpc-name
  }
}
